@@ -15,7 +15,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.40
+Release: 0.41
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -455,9 +455,10 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
-* Fri Dec 27 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.40
+* Fri Dec 27 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.41
 - add BETA-GPG-KEY (but not in headers using %%pubkey yet).
 - disable perl module magic rule.
+- ignore ENOENT return from db->close (#80514,#79314).
 
 * Thu Dec 26 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.39
 - add Red Hat pubkeys to rpm header.
